--- a/src/main/webapp/package.json
+++ b/src/main/webapp/package.json
@@ -38,6 +38,7 @@
     "friendly-errors-webpack-plugin": "^1.1.3",
     "html-webpack-plugin": "^2.28.0",
     "http-proxy-middleware": "^0.17.3",
+    "karma-webpack": "^2.0.3",
     "less": "^2.7.2",
     "less-loader": "^4.0.4",
     "opn": "^4.0.2",
@@ -64,5 +65,7 @@
     "> 1%",
     "last 2 versions",
     "not ie <= 8"
-  ]
+  ],
+  "main": ".postcssrc.js",
+  "license": "ISC"
 }
