--- a/src/main/webapp/package.json
+++ b/src/main/webapp/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "webapp",
+  "name": "testkarma",
   "version": "1.0.0",
   "description": "A Vue.js project",
   "author": "Nihel <nihelbengamra@gmail.com>",
@@ -7,7 +7,11 @@
   "scripts": {
     "dev": "node build/dev-server.js",
     "start": "node build/dev-server.js",
-    "build": "node build/build.js"
+    "build": "node build/build.js",
+
+    "unit": "cross-env BABEL_ENV=test karma start test/unit/karma.conf.js --single-run",
+    "test": "npm run unit"
+
   },
   "dependencies": {
     "axios": "^0.16.2",
@@ -40,7 +44,6 @@
     "friendly-errors-webpack-plugin": "^1.1.3",
     "html-webpack-plugin": "^2.28.0",
     "http-proxy-middleware": "^0.17.3",
-    "karma-webpack": "^2.0.3",
     "less": "^2.7.2",
     "less-loader": "^4.0.4",
     "opn": "^4.0.2",
@@ -58,7 +61,31 @@
     "webpack-bundle-analyzer": "^2.2.1",
     "webpack-dev-middleware": "^1.10.0",
     "webpack-hot-middleware": "^2.18.0",
-    "webpack-merge": "^4.1.0"
+    "webpack-merge": "^4.1.0",
+
+
+    "cross-env": "^4.0.0",
+    "karma": "^1.4.1",
+    "karma-chrome-launcher":"^2.2.0",
+    "karma-jasmine": "^1.1.0",
+    "jasmine-core": "^2.6.4",
+    "karma-coverage": "^1.1.1",
+    "karma-mocha": "^1.3.0",
+    "karma-phantomjs-launcher": "^1.0.2",
+    "karma-phantomjs-shim": "^1.4.0",
+    "karma-sinon-chai": "^1.3.1",
+    "karma-sourcemap-loader": "^0.3.7",
+    "karma-spec-reporter": "0.0.30",
+    "karma-webpack": "^2.0.2",
+    "lolex": "^1.5.2",
+    "mocha": "^3.2.0",
+    "chai": "^3.5.0",
+    "sinon": "^2.1.0",
+    "sinon-chai": "^2.8.0",
+    "inject-loader": "^3.0.0",
+    "babel-plugin-istanbul": "^4.1.1",
+    "phantomjs-prebuilt": "^2.1.14"
+
   },
   "engines": {
     "node": ">= 4.0.0",
