--- a/src/main/resources/project.properties
+++ b/src/main/resources/project.properties
@@ -31,3 +31,8 @@ endpoint.skills=/skills
 endpoint.removeskill=/removeskill
 endpoint.removelink=/removelink
 endpoint.links=/links
+
+# => Wish
+
+endpoint.addwish =/addwish
+endpoint.wishes =/wishes
