--- a/src/main/webapp/package.json
+++ b/src/main/webapp/package.json
@@ -64,6 +64,7 @@
     "cross-env": "^4.0.0",
     "karma": "^1.4.1",
     "karma-chrome-launcher":"^2.2.0",
+    "karma-sourcemap-writer": "^0.1.2",
     "karma-jasmine": "^1.1.0",
     "jasmine-core": "^2.6.4",
     "karma-coverage": "^1.1.1",
@@ -80,7 +81,10 @@
     "sinon": "^2.1.0",
     "sinon-chai": "^2.8.0",
     "inject-loader": "^3.0.0",
-    "babel-plugin-istanbul": "^4.1.1",
+    "babel-plugin-istanbul": "^4.1.4",
+    "babelify": "^7.3.0",
+    "babel-core":"^6.25.0",
+    "browserify": "^14.4.0",
     "phantomjs-prebuilt": "^2.1.14"
 
   },
