--- a/src/main/resources/project.properties
+++ b/src/main/resources/project.properties
@@ -22,6 +22,7 @@ endpoint.userdisconnect=/userdisconnect
 endpoint.getuserrole=/getuserrole
 endpoint.collaboratorsemailpassword=/sendemail/{collaboratorId}
 endpoint.isconnected=/sendtoken
+endpoint.expertise=/expertise
 
 #=> Skills
 endpoint.addskill=/addskill
