--- a/src/main/webapp/package.json
+++ b/src/main/webapp/package.json
@@ -16,6 +16,7 @@
     "vue-js-dropdown": "^1.0.2",
     "vue-resource": "^1.3.4",
     "vue-router": "^2.3.1",
+    "vue-strap": "github:wffranco/vue-strap",
     "vuex": "^2.3.1"
   },
   "devDependencies": {
