--- a/src/main/webapp/package.json
+++ b/src/main/webapp/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^0.16.2",
     "jquery": "^3.2.1",
+    "jwt-decode": "^2.2.0",
     "vue": "^2.3.3",
     "vue-js-dropdown": "^1.0.2",
     "vue-resource": "^1.3.4",
