[US#GCo8] Mise à jour dynamique des niveaus

--- a/src/main/resources/project.properties
+++ b/src/main/resources/project.properties
@@ -23,6 +23,7 @@ endpoint.getuserrole=/getuserrole
 endpoint.collaboratorsemailpassword=/sendemail/{collaboratorId}
 endpoint.isconnected=/sendtoken
 endpoint.expertise=/expertise
+endpoint.getcollabexpertises=/getcollabexpertises/{collaboratorId}
 
 #=> Skills
 endpoint.addskill=/addskill
