--- a/src/main/webapp/package.json
+++ b/src/main/webapp/package.json
@@ -79,6 +79,7 @@
     "sinon": "^2.1.0",
     "sinon-chai": "^2.8.0",
     "url-loader": "^0.5.8",
+    "v-tooltip": "^2.0.0-beta.5",
     "vue-loader": "^12.1.0",
     "vue-star-rating": "^1.4.0",
     "vue-style-loader": "^3.0.1",
