--- a/src/main/webapp/package.json
+++ b/src/main/webapp/package.json
@@ -13,11 +13,13 @@
   },
   "dependencies": {
     "axios": "^0.16.2",
+    "bloodhound-js": "^1.2.1",
     "jquery": "^3.2.1",
     "simplebar": "^2.4.3",
     "jwt-decode": "^2.2.0",
     "vue": "^2.3.3",
     "vue-js-dropdown": "^1.0.2",
+    "vue-js-modal": "^1.2.2",
     "vue-resource": "^1.3.4",
     "vue-router": "^2.3.1",
     "vue-strap": "github:wffranco/vue-strap",
@@ -65,6 +67,7 @@
     "karma-sourcemap-writer": "^0.1.2",
     "karma-spec-reporter": "0.0.30",
     "karma-webpack": "^2.0.2",
+    "imports-loader": "^0.7.1",
     "less": "^2.7.2",
     "less-loader": "^4.0.4",
     "lolex": "^1.5.2",
