--- a/src/main/webapp/package.json
+++ b/src/main/webapp/package.json
@@ -84,6 +84,7 @@
     "vue-star-rating": "^1.4.0",
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.3.3",
+    "vue-unit": "^0.2.2",
     "vue-validator": "^3.0.0-alpha.2",
     "webpack": "^2.6.1",
     "webpack-bundle-analyzer": "^2.2.1",
