--- a/src/main/webapp/package.json
+++ b/src/main/webapp/package.json
@@ -52,13 +52,16 @@
     "friendly-errors-webpack-plugin": "^1.1.3",
     "html-webpack-plugin": "^2.28.0",
     "http-proxy-middleware": "^0.17.3",
+    "imports-loader": "^0.7.1",
     "inject-loader": "^3.0.0",
     "jasmine-ajax": "^3.3.1",
     "jasmine-core": "^2.6.4",
+    "jasmine-jquery": "^2.1.1",
     "karma": "^1.4.1",
     "karma-chrome-launcher": "^2.2.0",
     "karma-coverage": "^1.1.1",
     "karma-jasmine": "^1.1.0",
+    "karma-jasmine-jquery": "^0.1.1",
     "karma-mocha": "^1.3.0",
     "karma-phantomjs-launcher": "^1.0.2",
     "karma-phantomjs-shim": "^1.4.0",
@@ -67,7 +70,6 @@
     "karma-sourcemap-writer": "^0.1.2",
     "karma-spec-reporter": "0.0.30",
     "karma-webpack": "^2.0.2",
-    "imports-loader": "^0.7.1",
     "less": "^2.7.2",
     "less-loader": "^4.0.4",
     "lolex": "^1.5.2",
