Back for find collaborators by expertise

--- a/backend/src/main/resources/project.properties
+++ b/backend/src/main/resources/project.properties
@@ -24,6 +24,7 @@ endpoint.collaboratorsemailpassword=/sendemail/{collaboratorId}
 endpoint.isconnected=/sendtoken
 endpoint.expertise=/expertise
 endpoint.getcollabexpertises=/getcollabexpertises/{collaboratorId}
+endpoint.collaboratorsexpertises=/collaboratorsexpertises
 
 #=> Skills
 endpoint.addskill=/addskill
