--- a/backend/src/main/resources/project.properties
+++ b/backend/src/main/resources/project.properties
@@ -25,6 +25,7 @@ endpoint.isconnected=/sendtoken
 endpoint.expertise=/expertise
 endpoint.getcollabexpertises=/getcollabexpertises/{collaboratorId}
 endpoint.collaboratorsexpertises=/collaboratorsexpertises
+endpoint.expertisebycollaborator=/expertisebycollaborator
 
 #=> Skills
 endpoint.addskill=/addskill
