--- a/backend/src/main/WEB-INF/web.xml
+++ b/backend/src/main/WEB-INF/web.xml
@@ -21,6 +21,14 @@
         <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
     </listener>
 
+    <filter>
+        <filter-name>CorsFilter</filter-name>
+        <filter-class>com.viseo.c360.competence.file.CORSFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>CorsFilter</filter-name>
+        <url-pattern>*</url-pattern>
+    </filter-mapping>
 
     <servlet>
         <servlet-name>mvc-dispatcher</servlet-name>
