--- a/backend/src/main/resources/project.properties
+++ b/backend/src/main/resources/project.properties
@@ -13,6 +13,7 @@ key.jwt=bXNkcHVp
 endpoint.regexCollaborators=/collaborateurs/regex
 endpoint.regexTrainings=/formations/regex
 endpoint.collaborators=/collaborateurs
+endpoint.collabdescriptionbyid=/collabdescriptionbyid/{collab_id}
 endpoint.updatecollaborator=/updatecollaborator
 endpoint.updatecollaboratorpicture=/uploadFile
 endpoint.collaboratorbyid=/getcollaborator/{collab_id}
