--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -51,6 +51,12 @@
             <version>1.5.5</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.rabbitmq</groupId>
+            <artifactId>amqp-client</artifactId>
+            <version>4.1.1</version>
+        </dependency>
+
         <!-- TESTING -->
         <dependency>
             <groupId>junit</groupId>
