[develop] RabbitMQ Changement de microservice

--- a/backend/src/main/resources/project.properties
+++ b/backend/src/main/resources/project.properties
@@ -9,6 +9,7 @@ key.jwt=bXNkcHVp
 
 #Endpoints
 #=> Collaborator
+endpoint.gethashmap=/gethashmap
 endpoint.regexCollaborators=/collaborateurs/regex
 endpoint.regexTrainings=/formations/regex
 endpoint.collaborators=/collaborateurs
