[develop] RabbitMQ Changement de microservice V2

--- a/backend/src/main/resources/project.properties
+++ b/backend/src/main/resources/project.properties
@@ -9,7 +9,8 @@ key.jwt=bXNkcHVp
 
 #Endpoints
 #=> Collaborator
-endpoint.gethashmap=/gethashmap
+endpoint.connectuserinmicroservices=/connectuserinmicroservices
+endpoint.getuserifalreadyconnectedelsewhere=/getuserifalreadyconnectedelsewhere
 endpoint.regexCollaborators=/collaborateurs/regex
 endpoint.regexTrainings=/formations/regex
 endpoint.collaborators=/collaborateurs
