--- a/backend/src/main/resources/project.properties
+++ b/backend/src/main/resources/project.properties
@@ -6,6 +6,8 @@ jdbc.password= projet360
 
 #Security
 key.jwt=bXNkcHVp
+#jwt.secret=bXNkcHVp
+jwt.header=Authorization
 
 #Endpoints
 #=> Collaborator
