[dev] finish security back test

--- a/backend/src/main/resources/project.properties
+++ b/backend/src/main/resources/project.properties
@@ -6,7 +6,7 @@ jdbc.password= projet360
 
 #Security
 key.jwt=bXNkcHVp
-#jwt.secret=bXNkcHVp
+jwt.secret=mySecret
 jwt.header=Authorization
 
 #Endpoints
